--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <h1>สวัสดีครับผมชื่อ นาย ณัฐวัฒน์ คนขำ</h1> 
     <h2>เว็บไซด์นี้ผมสร้างขึ้นเพื่อที่จะนำเสนอผลงานเว็บไซด์ที่ผมเคยสร้างไว้เผื่อคณะกรรมการอยากชมผลงานเพิ่มเติม</h2>
-    <h3>เพื่อประกอบการตัดสินใจของกรรมการทุกท่านเชิญชมได้เลยครับ</h3>
+    <h3>เพื่อประกอบการตัดสินใจของกรรมการทุกท่านเชิญชมผลงานได้เลยครับ</h3>
 
     <a href="https://natthawatbmi.netlify.app">เว็บไซด์คำนวนค่าดัชนีมวลกาย</a><br>
     <a href="https://natthawatrandom.netlify.app">เว็บไซด์สุ่มเลขที่</a><br>
