--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="https://natthawat24.netlify.app/">เว็บเกม24</a>
 
     <h2>เหตุผลเพิ่มเติม</h2>
-    <h3>ถ้ากรรมการได้รับชมผลงานของผมแล้วกรรมการก็น่าจะรู้ว่าผลงานของผมยังไม่ดีเท่าไหร่ผมจึงอยากศึกษาความรู้เพิ้มเติมเพื่อที่จะพัฒนาศักภาพของตัวเองให้เก่งขึ้นมากกว่านี้</h3>
+    <h3>ถ้ากรรมการได้รับชมผลงานของผมแล้วกรรมการก็น่าจะรู้ว่าผลงานของผมยังไม่ดีเท่าไหร่ผมจึงอยากศึกษาความรู้เพิ่มเติมเพื่อที่จะพัฒนาศักภาพของตัวเองให้เก่งขึ้นมากกว่านี้</h3>
     <h3>เพื่อที่ในอนาคตจะได้นำความรู้จากมหาวิทยลัยไปต่อยอดเพิ่มให้กับตัวผมเองเพื่อประกอบอาชีพต่างๆในอนาคต</h3>
     <h3>คติประจำใจ</h3>
     <h3>ชีวิตคนเราคือการเรียนรู้ตลอดชีวิต</h3>
