--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <a href="https://natthawatbmi.netlify.app">เว็บไซด์คำนวนค่าดัชนีมวลกาย</a><br>
     <a href="https://natthawatrandom.netlify.app">เว็บไซด์สุ่มเลขที่</a><br>
-    <a href="https://natthawat24.netlify.app/">เว็บเกม24</a>
+    <a href="https://natthawat24.netlify.app/">เว็บเกม24</a><br>
     <a href="https://natthawatconvert.netlify.app/">เว็บแปลงหน่วยอุณหภูมิ</a>
 
     <h2>เหตุผลเพิ่มเติม</h2>
