--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div style="text-align: center;"></div>
-    <title>ผลงานเพิ่มเติม</title>
+    <title>Additional works</title>
 </head>
 <body>
     
